--- a/index.html
+++ b/index.html
@@ -92,55 +92,97 @@
         </p>
         <button id="slideToggleBtn">Toggle Slide...</button>
       </div>
-      <div id="fadeIn">
-        <h2>The .fadeIn Function</h2>
-        <p></p>
-        <button>Try It!!</button>
+      <div id="fade">
+        <h2>The .fadeIn and .fadeOut Function</h2>
+        <p id="fadeP">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non est,
+          asperiores illo nemo itaque dicta optio consectetur voluptates.
+          Voluptatem quidem quas magnam eveniet aut aliquid dolor est quo at.
+          Eveniet.
+        </p>
+        <button id="fadeOutBtn">Fade Out...</button>
+        <button id="fadeInBtn">Fade In...</button>
       </div>
-      <div id="fadeOut">
-        <h2>The .fadeOut Function</h2>
-        <p></p>
-        <button>Try It!!</button>
-      </div>
-      <div id="addid">
-        <h2>The .addid Function</h2>
-        <p></p>
-        <button>Try It!!</button>
+      <div id="addClass">
+        <h2>The .addClass Function</h2>
+        <p id="addClassP">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea placeat
+          veniam, recusandae repellendus magnam accusantium blanditiis facere
+          saepe reiciendis, non, sequi id temporibus soluta aperiam perspiciatis
+          eum adipisci est sunt?
+        </p>
+        <button id="addClassBtn">Add Id...</button>
       </div>
       <div id="before">
         <h2>The .before Function</h2>
-        <p></p>
-        <button>Try It!!</button>
+        <p id="beforeP">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo
+          repudiandae qui tempore ipsum reiciendis, deleniti provident aperiam
+          odit nostrum rerum beatae? Perferendis suscipit in omnis est.
+          Repudiandae sit at id.
+        </p>
+        <button id="beforeBtn">Add Before...</button>
       </div>
       <div id="after">
         <h2>The .after Function</h2>
-        <p></p>
-        <button>Try It!!</button>
+        <p id="afterP">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam quasi
+          eius incidunt ad officiis ullam amet eum id! Accusantium, maiores amet
+          voluptas dignissimos non odio porro doloremque laborum provident
+          perspiciatis?
+        </p>
+        <button id="afterBtn">Add After...</button>
       </div>
       <div id="append">
         <h2>The .append Function</h2>
-        <p></p>
-        <button>Try It!!</button>
+        <p id="appendP">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+          adipisci, molestias assumenda perspiciatis recusandae cumque
+          temporibus eveniet autem, nemo unde cupiditate neque. Magni animi
+          dolor tempora voluptas quam iusto ipsum.
+        </p>
+        <button id="appendBtn">Append...</button>
       </div>
       <div id="html">
         <h2>The .html Function</h2>
-        <p></p>
-        <button>Try It!!</button>
+        <p id="htmlP">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi facere
+          quae aspernatur porro. Nulla obcaecati provident, recusandae, unde
+          deserunt facilis sed quaerat, excepturi adipisci ut iste
+          exercitationem mollitia iure similique.
+        </p>
+        <button id="htmlBtn">HTML...</button>
       </div>
       <div id="attr">
         <h2>The .attr Function</h2>
-        <p></p>
-        <button>Try It!!</button>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iure
+          corporis eaque, vel neque molestiae aut harum nostrum facere cum vero
+          adipisci, illum laborum repudiandae non impedit voluptatum architecto
+          odit.
+        </p>
+        <button id="attrBtn">Attr...</button>
       </div>
       <div id="val">
         <h2>The .val Function</h2>
-        <p></p>
-        <button>Try It!!</button>
+        <p id="valP">
+          When the button is clicked, the value (innerHTML or in this case the
+          text of this paragraph) will be saved in a variable and then assigned
+          to the otherwise empty paragrpah element directly below this
+          paragraph...
+        </p>
+        <p id="addValP"></p>
+        <button id="valBtn">Val...</button>
       </div>
       <div id="text">
         <h2>The .text Function</h2>
-        <p></p>
-        <button>Try It!!</button>
+        <p id="textP">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate,
+          ut impedit iure ex fugiat soluta. Debitis veritatis odit magnam vero
+          neque, dignissimos ipsam voluptate expedita deleniti eum, mollitia,
+          aperiam enim.
+        </p>
+        <button id="textBtn">Text...</button>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
